DevTools: fix xhr breakpoint text overflow
BUG=357520

Review URL: https://codereview.chromium.org/216843002

git-svn-id: svn://svn.chromium.org/blink/trunk@170337 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/breakpointsList.css
+++ b/front_end/breakpointsList.css
@@ -33,6 +33,7 @@
     margin-bottom: 4px;
     margin-left: 23px;
     margin-right: 8px;
+    overflow: hidden;
 }
 
 #breakpoint-condition-input {
